--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3817,7 +3817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf46c2be",
+   "id": "52b423ae",
    "metadata": {},
    "source": [
     "## Filter Array"
@@ -3825,7 +3825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eade224",
+   "id": "b0779160",
    "metadata": {},
    "source": [
     "#### 1.Getting some elements out of an exiting array and creating a new array out them is called filtering\n",
@@ -3859,10 +3859,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "67081ddb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2511315365.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [128], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    arr=np.array([1,2,3,4,5,6,,7,8,9,10])\u001b[0m\n\u001b[1;37m                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "arr=np.array([1,2,3,4,5,6,,7,8,9,10])\n",
     "print(arr)\n",
@@ -3870,7 +3879,16 @@
     "index=[]\n",
     "\n",
     "# go through element in arr\n",
-    "for "
+    "for element in arr:\n",
+    "    # if the element is higher than 4,set the value to true,\n",
+    "    if element>4:\n",
+    "        index.append(True)\n",
+    "    else:\n",
+    "        index.append(False)\n",
+    "        \n",
+    "print(index)\n",
+    "newarr=arr[index]\n",
+    "print(newarr)"
    ]
   },
   {
