--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3817,7 +3817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b423ae",
+   "id": "df48035c",
    "metadata": {},
    "source": [
     "## Filter Array"
@@ -3825,7 +3825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0779160",
+   "id": "99d61791",
    "metadata": {},
    "source": [
     "#### 1.Getting some elements out of an exiting array and creating a new array out them is called filtering\n",
@@ -3859,21 +3859,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 129,
    "id": "67081ddb",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2511315365.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [128], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    arr=np.array([1,2,3,4,5,6,,7,8,9,10])\u001b[0m\n\u001b[1;37m                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[False, False, False, False, True, True, True, True, True, True]\n",
+      "[ 5  6  7  8  9 10]\n"
      ]
     }
    ],
    "source": [
-    "arr=np.array([1,2,3,4,5,6,,7,8,9,10])\n",
+    "arr=np.array([1,2,3,4,5,6,7,8,9,10])\n",
     "print(arr)\n",
     "# creat an empty list\n",
     "index=[]\n",
@@ -3893,27 +3894,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "de88adc0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[False, True, False, True, False, True, False, True, False, True]\n",
+      "[ 2  4  6  8 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print a last of even number from original list using array filter\n",
+    "\n",
+    "print(arr)\n",
+    "\n",
+    "index=[]\n",
+    "# i % 2 == 0\n",
+    "\n",
+    "for i in arr:\n",
+    "    if i %2 ==0:\n",
+    "        index.append(True)\n",
+    "    else:\n",
+    "        index.append(False)\n",
+    "        \n",
+    "print(index)\n",
+    "\n",
+    "newarr = arr[index]\n",
+    "print(newarr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "cc738e10",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False  True False  True  True False False  True False False False False]\n",
+      "[ 223 8787  655  333]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([11,223,45,8787,655,44,33,333,2,3,3,10])\n",
+    "\n",
+    "filter_arr=arr>100\n",
+    "newarr = arr[filter_arr]\n",
+    "\n",
+    "print(filter_arr)\n",
+    "print(newarr)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85d96c9a",
+   "cell_type": "markdown",
+   "id": "ff86f259",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Other"
+   ]
   },
   {
    "cell_type": "code",
