--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3817,7 +3817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df48035c",
+   "id": "bec520e2",
    "metadata": {},
    "source": [
     "## Filter Array"
@@ -3825,7 +3825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99d61791",
+   "id": "40c9061f",
    "metadata": {},
    "source": [
     "#### 1.Getting some elements out of an exiting array and creating a new array out them is called filtering\n",
@@ -3955,51 +3955,85 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff86f259",
+   "id": "6c132a7a",
    "metadata": {},
    "source": [
-    "### Other"
+    "### Other NumPy Functions\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "2f3167a7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(10)\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "id": "e4523c96",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.arange(5,25)\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "09d20d98",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5 10 15 20 25 30 35 40 45 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.arange(5,51,5)\n",
+    "print(arr)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9548e566",
+   "cell_type": "markdown",
+   "id": "c41732c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Reshape"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73d4bb60",
+   "cell_type": "markdown",
+   "id": "e8b0119c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "###### np.reshape(input,(shape))\n",
+    "######"
+   ]
   },
   {
    "cell_type": "code",
