--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3817,7 +3817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bec520e2",
+   "id": "03fdfde7",
    "metadata": {},
    "source": [
     "## Filter Array"
@@ -3825,7 +3825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40c9061f",
+   "id": "3228c82a",
    "metadata": {},
    "source": [
     "#### 1.Getting some elements out of an exiting array and creating a new array out them is called filtering\n",
@@ -3955,7 +3955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c132a7a",
+   "id": "c9678084",
    "metadata": {},
    "source": [
     "### Other NumPy Functions\n"
@@ -4020,7 +4020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c41732c1",
+   "id": "a0159f35",
    "metadata": {},
    "source": [
     "## Reshape"
@@ -4028,20 +4028,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8b0119c",
+   "id": "b3c5a3be",
    "metadata": {},
    "source": [
     "###### np.reshape(input,(shape))\n",
-    "######"
+    "###### array.reshape(shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "afaf8b5f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 1D to 2D conversion\n",
+    "arr=np.arange(0,25)\n",
+    "print(arr)\n",
+    "# one way\n",
+    "arr_2\n"
+   ]
   },
   {
    "cell_type": "code",
