--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3817,7 +3817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03fdfde7",
+   "id": "50f7b747",
    "metadata": {},
    "source": [
     "## Filter Array"
@@ -3825,7 +3825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3228c82a",
+   "id": "c94ff165",
    "metadata": {},
    "source": [
     "#### 1.Getting some elements out of an exiting array and creating a new array out them is called filtering\n",
@@ -3955,7 +3955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9678084",
+   "id": "f23dd6a7",
    "metadata": {},
    "source": [
     "### Other NumPy Functions\n"
@@ -4020,7 +4020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0159f35",
+   "id": "8fc60f2a",
    "metadata": {},
    "source": [
     "## Reshape"
@@ -4028,7 +4028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3c5a3be",
+   "id": "41feb354",
    "metadata": {},
    "source": [
     "###### np.reshape(input,(shape))\n",
@@ -4037,8 +4037,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 137,
    "id": "afaf8b5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24]\n",
+      "\n",
+      " [[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 1D to 2D conversion\n",
+    "arr=np.arange(0,25)\n",
+    "print(arr)\n",
+    "# one way\n",
+    "arr_2d=np.reshape(arr,(5,5))# or arr.reshape(5,5)\n",
+    "print('\\n',arr_2d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "b604b389",
    "metadata": {},
    "outputs": [
     {
@@ -4051,17 +4081,68 @@
     }
    ],
    "source": [
-    "## 1D to 2D conversion\n",
-    "arr=np.arange(0,25)\n",
+    "arr =np.arange(0,25)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "e8d07607",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(0,25)\n",
     "print(arr)\n",
-    "# one way\n",
-    "arr_2\n"
+    "\n",
+    "# anather way\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b604b389",
+   "id": "0e07e5ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b09d944",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8732084d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "184b803f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e21f594",
    "metadata": {},
    "outputs": [],
    "source": []
