--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3817,7 +3817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50f7b747",
+   "id": "cd512437",
    "metadata": {},
    "source": [
     "## Filter Array"
@@ -3825,7 +3825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c94ff165",
+   "id": "d3d94edb",
    "metadata": {},
    "source": [
     "#### 1.Getting some elements out of an exiting array and creating a new array out them is called filtering\n",
@@ -3955,7 +3955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f23dd6a7",
+   "id": "613d9919",
    "metadata": {},
    "source": [
     "### Other NumPy Functions\n"
@@ -4020,7 +4020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc60f2a",
+   "id": "81f45d38",
    "metadata": {},
    "source": [
     "## Reshape"
@@ -4028,7 +4028,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41feb354",
+   "id": "5927c7a4",
    "metadata": {},
    "source": [
     "###### np.reshape(input,(shape))\n",
@@ -4087,8 +4087,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "e8d07607",
+   "execution_count": 140,
+   "id": "fb74fc5e",
    "metadata": {},
    "outputs": [
     {
@@ -4096,7 +4096,13 @@
      "output_type": "stream",
      "text": [
       "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
-      " 24]\n"
+      " 24]\n",
+      "\n",
+      " [[[ 0  1  2  3  4]\n",
+      "  [ 5  6  7  8  9]\n",
+      "  [10 11 12 13 14]\n",
+      "  [15 16 17 18 19]\n",
+      "  [20 21 22 23 24]]]\n"
      ]
     }
    ],
@@ -4104,13 +4110,89 @@
     "arr = np.arange(0,25)\n",
     "print(arr)\n",
     "\n",
-    "# anather way\n"
+    "# anather way\n",
+    "arr_2d=arr.reshape(1,5,5)\n",
+    "print('\\n',arr_2d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "903ab347",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.min()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35826f59",
+   "metadata": {},
+   "source": [
+    "## 4.max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a708bd7",
+   "metadata": {},
+   "source": [
+    "#### The numpy.max()fuction is used to find the maximum value tin the arr array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "fcd7c5fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1cfa77b",
+   "metadata": {},
+   "source": [
+    "### 5. argmax()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30965907",
+   "metadata": {},
+   "source": [
+    "##### the numpy .argumax() function is used to find the index of the maximum "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e07e5ad",
+   "id": "0d44efc6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4118,7 +4200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b09d944",
+   "id": "40300694",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4126,7 +4208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8732084d",
+   "id": "4289d216",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4134,7 +4216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "184b803f",
+   "id": "9daa381d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4142,7 +4224,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e21f594",
+   "id": "ae5fe89b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2af1a904",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed29e6d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c07acff0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e9d0d13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e84cec7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be36f9a6",
    "metadata": {},
    "outputs": [],
    "source": []
