--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2994,10 +2994,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "afaf8b5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24]\n",
+      "\n",
+      " [[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]\n",
+      " [20 21 22 23 24]]\n"
+     ]
+    }
+   ],
    "source": [
     "## 1D to 2D conversion\n",
     "arr=np.arange(0,25)\n",
@@ -3009,10 +3024,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "b604b389",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24]\n"
+     ]
+    }
+   ],
    "source": [
     "arr =np.arange(0,25)\n",
     "print(arr)"
@@ -3020,10 +3044,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "fb74fc5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24]\n",
+      "\n",
+      " [[[ 0  1  2  3  4]\n",
+      "  [ 5  6  7  8  9]\n",
+      "  [10 11 12 13 14]\n",
+      "  [15 16 17 18 19]\n",
+      "  [20 21 22 23 24]]]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.arange(0,25)\n",
     "print(arr)\n",
@@ -3035,10 +3074,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "903ab347",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr_2d.min()"
    ]
@@ -3061,10 +3111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "fcd7c5fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr_2d.max()"
    ]
@@ -3087,27 +3148,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "0d44efc6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.argmax()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40300694",
+   "cell_type": "markdown",
+   "id": "0de81071",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### argsort()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "4289d216",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 1, 2, 3, 4],\n",
+       "        [0, 1, 2, 3, 4],\n",
+       "        [0, 1, 2, 3, 4],\n",
+       "        [0, 1, 2, 3, 4],\n",
+       "        [0, 1, 2, 3, 4]]], dtype=int64)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.argsort()#returns indices of aarray"
+   ]
   },
   {
    "cell_type": "code",
