--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3169,7 +3169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0de81071",
+   "id": "01302ada",
    "metadata": {},
    "source": [
     "### argsort()"
@@ -3201,84 +3201,243 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9daa381d",
+   "cell_type": "markdown",
+   "id": "bc30b1b2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### diagonal()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "ae5fe89b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0],\n",
+       "       [1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.diagonal() # tirke elememnt"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2af1a904",
+   "cell_type": "markdown",
+   "id": "7628923f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 8.SUM()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "ed29e6d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.sum()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c07acff0",
+   "cell_type": "markdown",
+   "id": "a197052b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 9.mean()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "1e9d0d13",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.mean()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e84cec7c",
+   "cell_type": "markdown",
+   "id": "6d212f42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 10.nonzero()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "be36f9a6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0], dtype=int64),\n",
+       " array([0, 0, 0, 0, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 4, 4, 4,\n",
+       "        4, 4], dtype=int64),\n",
+       " array([1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2,\n",
+       "        3, 4], dtype=int64))"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_2d.nonzero()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e95a5d1",
+   "cell_type": "markdown",
+   "id": "1d162e88",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 11.linespace"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "0cd0c745",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 10 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=np.arange(0,25,10)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9b4454c",
+   "metadata": {},
+   "source": [
+    "#### 12.ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "02c14be9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0  1  2  3  4]\n",
+      "  [ 5  6  7  8  9]\n",
+      "  [10 11 12 13 14]\n",
+      "  [15 16 17 18 19]\n",
+      "  [20 21 22 23 24]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19, 20, 21, 22, 23, 24])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# flatten array \n",
+    "# used multidimentional array to 1d array\n",
+    "print(arr_2d)\n",
+    "arr_2d.ravel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7facf1f8",
+   "metadata": {},
+   "source": [
+    "#### random.rand\n",
+    "#### random.randn\n",
+    "#### random.randint\n",
+    "#### random.random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "c4173228",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.26322174 0.63418337 0.71224356]\n",
+      " [0.28264016 0.94007717 0.87075774]\n",
+      " [0.02872549 0.12015157 0.35590268]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar=np.random.rand(3,3)\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1326edf9",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ar=np.random.rand(3,3)"
+   ]
   }
  ],
  "metadata": {
