--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -3169,7 +3169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01302ada",
+   "id": "eacfd39f",
    "metadata": {},
    "source": [
     "### argsort()"
@@ -3202,7 +3202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc30b1b2",
+   "id": "e41e8482",
    "metadata": {},
    "source": [
     "### diagonal()"
@@ -3235,7 +3235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7628923f",
+   "id": "321ad41c",
    "metadata": {},
    "source": [
     "#### 8.SUM()"
@@ -3264,7 +3264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a197052b",
+   "id": "8cd31d4c",
    "metadata": {},
    "source": [
     "#### 9.mean()\n",
@@ -3294,7 +3294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d212f42",
+   "id": "59f2977c",
    "metadata": {},
    "source": [
     "#### 10.nonzero()"
@@ -3328,7 +3328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d162e88",
+   "id": "2c89f941",
    "metadata": {},
    "source": [
     "#### 11.linespace"
@@ -3355,7 +3355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9b4454c",
+   "id": "c2eea2dd",
    "metadata": {},
    "source": [
     "#### 12.ravel()"
@@ -3364,7 +3364,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "02c14be9",
+   "id": "fe78efff",
    "metadata": {},
    "outputs": [
     {
@@ -3399,7 +3399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7facf1f8",
+   "id": "40d15f7b",
    "metadata": {},
    "source": [
     "#### random.rand\n",
@@ -3411,7 +3411,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c4173228",
+   "id": "0812f1a1",
    "metadata": {},
    "outputs": [
     {
@@ -3431,13 +3431,336 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "id": "66e869f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.25108224  0.09026145  0.85854219]\n",
+      " [-0.95893465 -0.99164734 -1.11452747]\n",
+      " [ 0.33140339  0.42674974 -1.57968191]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar=np.random.randn(3,3)\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "14187e22",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar = np.random.randint(10,20)\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "c3917e88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00559712 0.16430915 0.72657309 0.58334015 0.78502522 0.01481593\n",
+      " 0.47679152 0.21762217 0.61878839 0.41053455]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar=np.random.random(10)\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c8e92de",
+   "metadata": {},
+   "source": [
+    "#### 14. eye()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "2fd2b742",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# unit matrix or identity matrix\n",
+    "ar = np.eye(3,3)\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "a7be39d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar=np.eye(5,5,2)\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "6a6a0ab6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar=np.ones((2,3))\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a183ee1e",
+   "metadata": {},
+   "source": [
+    "#### 16.zeros()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "ca95a518",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar= np.zeros((2,3))\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6df299c3",
+   "metadata": {},
+   "source": [
+    "#### 17.diag()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "4b85cddb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  0  0]\n",
+      " [ 0 10  0]\n",
+      " [ 0  0  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar=np.diag((2,10,2))\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "ffbb107b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0]\n",
+      " [0 2 0 0]\n",
+      " [0 0 3 0]\n",
+      " [0 0 0 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ar=np.diag((1,2,3,4))\n",
+    "print(ar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f31bf666",
+   "metadata": {},
+   "source": [
+    "### 18.dot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "57e67304",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "[1 2 3 4]\n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "[[1 2]\n",
+      " [3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# matrix multiplication /dot product\n",
+    "\n",
+    "ar1 = np.arange(1,5)\n",
+    "ar2 = np.arange(1,5)\n",
+    "\n",
+    "print(ar1)\n",
+    "print(ar2)\n",
+    "\n",
+    "ar_1= ar1.reshape(2,2)\n",
+    "ar_2 = ar2.reshape(2,2)\n",
+    "\n",
+    "print(ar_1)\n",
+    "print(ar_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "0f447f89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7, 10],\n",
+       "       [15, 22]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ar_1.dot(ar_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "904890f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 4],\n",
+       "       [6, 8]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(ar_1)\n",
+    "\n",
+    "ar_1*2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1326edf9",
+   "id": "612f7d21",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ar=np.random.rand(3,3)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc93834c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1152c296",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
