--- a/NUMPY Advanced ....ipynb
+++ b/NUMPY Advanced ....ipynb
@@ -431,31 +431,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db509a29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dtype\n",
-    "print(a1.dtype)\n",
-    "print"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "de00bb38",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpy Version is : 1.24.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Numpy Version is :\",np.__version__ )"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5a16c22e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8 9]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creat a numpy array using list\n",
+    "\n",
+    "arr = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "print (arr)\n",
+    "print(type(arr))"
+   ]
   },
   {
    "cell_type": "code",
