--- a/NUMPY Advanced ....ipynb
+++ b/NUMPY Advanced ....ipynb
@@ -32,7 +32,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
+   "id": "c1b89db5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# np.array \n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "a = np.array([1,2,3])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "3e0d31a3",
    "metadata": {},
    "outputs": [
@@ -55,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5b027c2a",
    "metadata": {},
    "outputs": [
@@ -73,7 +96,7 @@
        "       [3, 5, 6]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "5a3e2dba",
    "metadata": {},
    "outputs": [
@@ -101,7 +124,7 @@
        "        [7, 8]]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "47a28c3f",
    "metadata": {},
    "outputs": [
@@ -124,7 +147,7 @@
        "array([1., 2., 3.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "45ac010b",
    "metadata": {},
    "outputs": [
@@ -146,7 +169,7 @@
        "array([1, 3, 5, 7, 9])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "dbb12a37",
    "metadata": {},
    "outputs": [
@@ -179,7 +202,7 @@
        "         [14, 15]]]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "c751e9bb",
    "metadata": {},
    "outputs": [
@@ -203,7 +226,7 @@
        "       [1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "10e10342",
    "metadata": {},
    "outputs": [
@@ -227,7 +250,7 @@
        "       [0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "c7b7e2f7",
    "metadata": {},
    "outputs": [
@@ -248,7 +271,7 @@
        "array([-10,  -8,  -6,  -4,  -2,   1,   3,   5,   7,  10])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "59a6cb5f",
    "metadata": {},
    "outputs": [
@@ -272,7 +295,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "45e18fd2",
    "metadata": {},
    "outputs": [
@@ -306,7 +329,7 @@
        "        [6, 7]]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "e648eb66",
    "metadata": {},
    "outputs": [
@@ -331,7 +354,7 @@
        "3"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "0631653c",
    "metadata": {},
    "outputs": [
@@ -364,7 +387,7 @@
        "        [6, 7]]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "cc57c453",
    "metadata": {},
    "outputs": [
@@ -396,7 +419,7 @@
        "       [ 8.,  9., 10., 11.]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "c2c8305d",
    "metadata": {},
    "outputs": [
@@ -419,7 +442,7 @@
        "4"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "db509a29",
    "metadata": {},
    "outputs": [],
@@ -441,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "de00bb38",
    "metadata": {},
    "outputs": [
@@ -459,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "5a16c22e",
    "metadata": {},
    "outputs": [
@@ -467,8 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3 4 5 6 7 8 9]\n",
-      "<class 'numpy.ndarray'>\n"
+      "[1 2 3 4 5 6 7 8 9] <class 'numpy.ndarray'>\n"
      ]
     }
    ],
@@ -476,8 +498,7 @@
     "# creat a numpy array using list\n",
     "\n",
     "arr = np.array([1,2,3,4,5,6,7,8,9])\n",
-    "print (arr)\n",
-    "print(type(arr))"
+    "print(arr,type(arr))"
    ]
   },
   {
